Revision history for Perl extension PGXN::API

0.20.1

0.20.0  2024-02-09T17:36:10Z
      - Removed the `Capfile` and `eg` directory. Examples for managing PGXN
        can now be found in the pgxn/pgxn-ops GitHub repository.
      - Switched from Text::Markdown to CommonMark for parsing and formatting
        Markdown files (but not MultiMarkdown files). This allows code fences
        to work and generates nicer HTML in general, but is stricter about
        certain things.
      - The docs indexer now indexes a distribution's README if it is the only
        documentation it finds in the distribution (#12).
      - The docs indexer now strictly links an extension to the doc file
        specified via the `docfile` key in its `provides` object, even if
        it's a README (#10).
      - The indexer will now index a testing release if there are no stable
        releases, and will index an unstable release if there are neither stable
        nor testing releases (#2).
      - Updated the SemVer regex when parsing rsync output to the official
        version published in https://regex101.com/r/vkijKf/ (#16).
      - Fix unzipping of distributions to ensure that all directories are
        readable and executable but not writeable by all, and that files are
        only readable by all (#15).
      - Dropped support for Perl 5.10 and 5.12.

0.16.5  2016-06-22T18:03:05Z
      - Fixed a test failure on systems with a non-English locale, thanks to
        Slaven Rezić (issue #25).
      - Fixed test failures on Windows.

0.16.4  2016-06-15T16:10:33Z
      - Fixed a bug where v1.0.0 Semantic Versions were not matched in synced
        file names and directories.
      - Fixed a bug that tried to read an extension JSON file case-sensitively.
      - Fixed test failures due to a change in the generation of JSONP
        responses in Plack 1.0031.
      - Fixed a bug where the "pgxnbod" ID of a cleaned HTML element could be